--- a/src/main/resources/stylesheets/project.css
+++ b/src/main/resources/stylesheets/project.css
@@ -7,6 +7,7 @@
   -fx-padding: 20;
   -fx-background-radius: 15;
   -fx-box-shadow: black 0 0 10;
+  -fx-max-width: 700px;
 }
 
 .card-area-table-felt {
