--- a/src/main/resources/stylesheets/project.css
+++ b/src/main/resources/stylesheets/project.css
@@ -1,12 +1,12 @@
 .main-background {
-  -fx-background-color: radial-gradient(focus-distance 0% , center 50% 50% , radius 50% , rgb(22,81,93) 30%, rgb(0,52,63) 100%);
+  -fx-background-color: radial-gradient(focus-distance 0% , center 50% 50% , radius 50% , rgb(22,81,93) 30%, rgb(1, 59, 72) 100%);
 }
 
 .card-area-table {
   -fx-background-color: #6A4515;
   -fx-padding: 20;
   -fx-background-radius: 15;
-  -fx-box-shadow: black 0 0 10;
+  -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 10, 0, 0, 0);
   -fx-max-width: 700px;
 }
 
@@ -16,10 +16,14 @@
   -fx-background-radius: 10;
 }
 
+.card-image {
+  -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 5, 0, 2, 2);
+}
+
 .control-panel {
   -fx-background-color: #6A4515;
   -fx-background-radius: 12;
-  -fx-box-shadow: black 0 0 10;
+  -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 5, 0, 1, 1);
 }
 
 .deal-hand-button {
@@ -27,11 +31,19 @@
   -fx-text-fill: black;
   -fx-font-size: 16;
   -fx-font-weight: 700;
+  -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 5, 0, 2, 2);
 }
 
 .deal-hand-button:hover {
-  -fx-scale: 1.05;
+  -fx-scale-x: 1.05;
+  -fx-scale-y: 1.05;
   -fx-background-color: #007ea4;
+}
+
+.deal-hand-button:pressed {
+  -fx-scale-x: 1;
+  -fx-scale-y: 1;
+  -fx-background-color: #246277;
 }
 
 .check-hand-button {
@@ -39,11 +51,19 @@
   -fx-text-fill: black;
   -fx-font-size: 16;
   -fx-font-weight: 700;
+  -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.5), 5, 0, 2, 2);
 }
 
 .check-hand-button:hover {
-  -fx-scale: 1.05;
+  -fx-scale-x: 1.05;
+  -fx-scale-y: 1.05;
   -fx-background-color: rgba(152, 157, 45, 0.77);
+}
+
+.check-hand-button:pressed {
+  -fx-scale-x: 1;
+  -fx-scale-y: 1;
+  -fx-background-color: rgba(255, 255, 0, 0.77);
 }
 
 .text-label {
